tests/paczka2/big_fuzzy/48544367.err
Error in line 11: 2M64o9n S220 53,4
Error in line 20: S220 S220 35,0
Error in line 30: DnY A168 33,5
Error in line 26: S220 S404 86,9
Error in line 31: DnY S404 29,8
Error in line 37: ?S22^
Error in line 38: IPLo S404 5,8
Error in line 43: IPLo S104 10,6
Error in line 65: BaaXtXVnRc S404 58,9
Error in line 71: S220 S404 93,3
Error in line 78: S220 A168 17,3
Error in line 82: BdEX1 A168 35,5
Error in line 87: S220 S220 -1,5
Error in line 84: S220 S220 51,9
Error in line 126: S220 S404 66,9
Error in line 135: S220 S104 94,9
Error in line 136: IPLo A168 4,8
Error in line 141: IPLo S220 80,0
Error in line 138: FukUjLUu A168 44,3
Error in line 160: IPLo A168 14,6
Error in line 155: FukUjLUu S404 79,2
Error in line 170: 2M64o9n S104 29,58
Error in line 162: S220 S104 47,2
Error in line 164: BaaXtXVnRc S220 94,9
Error in line 169: 2M64o9n S104 87,5
Error in line 171: DnY A168 2,9
Error in line 182: BaaXtXVnRc S220 93,5
Error in line 185: BaaXtXVnRc S104 80,8
Error in line 186: BaaXtXVnRc S220 0,1
Error in line 194: DnY S4G4 25G,9
Error in line 198: BdEX1 S104 0,1
Error in line 202: BdEX1 A168 21,0
Error in line 183: DnY S404 84,2
Error in line 228: DnY S104 79,5
Error in line 237: 2M64o9n S404 57,8
Error in line 240: FukUjLUu S220 3,9
Error in line 247: 2M64o9n S104 45,9
